# pyterrier_pisa

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  build.sh  patcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  ci.yml  deploy.yml  style.yml  test.yml  tmp_ci.yml
examples/: pyterrier_pisa_antique.ipynb
src/pyterrier_pisa/: __init__.py  _pisathon.cpp  cli.py  indexers.py  pisa_metadata_adapter.py  stopwords.py
src/pyterrier_pisa/pt_docs/: index.rst
tests/: base.py  test_ciff.py  test_dict.py  test_multithread_retrieve.py  test_tokenize.py  test_variants.py  test_vaswani.py
